--- a/server/style/main.less
+++ b/server/style/main.less
@@ -53,19 +53,22 @@ p {
   
   .info {
     position: absolute;
-    left: 30px;
-    bottom: 30px;
-    color: rgba(255, 255, 255, 0.7);
+    left: 0px;
+    bottom: 0px;
+    color: rgba(255, 255, 255, 1.0);
     font-size: 30px;
     z-index: 100;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    padding: 30px;
     
     .artist {
       font-weight: bold;
     }
-    
-    .track {
-      color: rgba(255, 255, 255, 0.6);
+
+    .album {
+      color: rgba(255, 255, 255, 0.5);
     }
   }
 
@@ -94,6 +97,7 @@ p {
     right: 30px;
     bottom: 80px;
     background-image: url(../img/yes.png); 
+    visibility: hidden;
   }
 
   .no {
@@ -101,5 +105,6 @@ p {
     right: 30px;
     bottom: 30px;
     background-image: url(../img/no.png); 
+    visibility: hidden;
   }
 }
