--- a/server/style/main.less
+++ b/server/style/main.less
@@ -38,8 +38,12 @@ p {
 }
 
 #pictures {
+  width: 100%;
   height: 100%;
-  
+  .request {
+  	color: rgba(255, 255, 255, 0.7);
+  	font-size: 0.8em;
+  }
   .picture {
     position: absolute;
     width: 100%;
@@ -50,7 +54,22 @@ p {
     background-position: center center;
     .transition(opacity 2s); // If you change this, also change fadeSpeed in pictures-view.js
   }
-  
+  .title {
+  	position: absolute;
+  	left: 0px;
+  	top: 0px;
+  	color: rgba(255, 255, 255, 1.0);
+  	font-size: 48px;
+  	z-index: 100;
+  	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  	background: rgba(0, 0, 0, 0.5);
+  	width: 100%;
+  	padding: 30px;
+
+  	span {
+  	  font-weight: bold;
+  	}
+  }
   .info {
     position: absolute;
     left: 0px;
@@ -69,6 +88,7 @@ p {
 
     .album {
       color: rgba(255, 255, 255, 0.5);
+      display: none;
     }
   }
 
